lunch hippo repo

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,18 +86,18 @@
                                         <!-- WORK 1 END -->
                                         <!-- WORK 1 START -->
                                         <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional nodeJS fullstack backend">
-                                            <a class="open-project" target="_blank" href="#">
+                                            <a class="open-project" target="_blank" href="https://github.com/JoeWrightNC/TheLunchHippo">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
                                                         <div class="portfolio-content">
                                                             <h2>The Lunch Hippo</h2>
                                                             <hr>
                                                             <p>
-                                                                Slackbot built as a passion project for a previous employer.  Automated semiweekly lunch orders using a conversational slack bot.
+                                                                Slackbot built as a passion project for a previous employer.  Automated semiweekly lunch orders using a conversational slack bot. Medium Article coming soon.
                                                                 <br> 
                                                                 G Suite, Google APIs, Node.JS, Heroku, Slack
                                                                 <br>
-                                                                Click to Visit Medium Article
+                                                                Click to Visit Code on Github
                                                             </p>
                                                         </div>
                                                         <div class="portfolio-overlay"></div>
