--- a/resume.html
+++ b/resume.html
@@ -55,6 +55,12 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
+                                <label class="progress-bar-label">Wordpress</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
                                 <label class="progress-bar-label">Bootstrap 3.3/3.7/4.0</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
@@ -85,30 +91,18 @@
                                         <span>90%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">React.JS/Redux</label>
-                                <div class="progress">
-                                    <div style="width: 85%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>85%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Vue.JS</label>
-                                <div class="progress">
-                                    <div style="width: 60%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>60%</span>
-                                    </div>
-                                </div>
                             </div>
                             <div class="col-sm-4">
                                 <label class="progress-bar-label">Express/Node.JS</label>
                                 <div class="progress">
-                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>90%</span>
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">MongoDB/NoSQL</label>
+                                <label class="progress-bar-label">PHP</label>
                                 <div class="progress">
-                                    <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>80%</span>
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">MySQL</label>
@@ -117,40 +111,34 @@
                                         <span>90%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">Git</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">PHP</label>
-                                <div class="progress">
-                                    <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>80%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Wordpress</label>
-                                <div class="progress">
-                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>90%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Visual Basic</label>
+                                <label class="progress-bar-label">MongoDB/NoSQL</label>
                                 <div class="progress">
                                     <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <span>70%</span>
                                     </div>
                                 </div>
+                                <label class="progress-bar-label">React.JS/Redux</label>
+                                <div class="progress">
+                                    <div style="width: 75%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>75%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Vue.JS</label>
+                                <div class="progress">
+                                    <div style="width: 30%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>30%</span>
+                                    </div>
+                                </div>
                                 <label class="progress-bar-label">Angular.JS</label>
                                 <div class="progress">
-                                    <div style="width: 40%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>40%</span>
+                                    <div style="width: 30%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>30%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Angular 2/4</label>
                                 <div class="progress">
-                                    <div style="width: 40%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>40%</span>
+                                    <div style="width: 30%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>30%</span>
                                     </div>
                                 </div>
                             </div>
@@ -175,19 +163,7 @@
                                 </div>
                                 <label class="progress-bar-label">SVG</label>
                                 <div class="progress">
-                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>90%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Material Design</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Logo Design</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
                                     </div>
                                 </div>
@@ -197,15 +173,21 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">Customer Studies</label>
+                                <label class="progress-bar-label">Material Design</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">Business Analytics</label>
+                                <label class="progress-bar-label">Web/Marketing Analytics</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Git</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
                                     </div>
                                 </div>
@@ -220,15 +202,17 @@
                                     <div class="exp-holder">
                                             <div class="exp">
                                                     <div class="hgroup">
-                                                        <h4><span>Web Developer</span> / State Newsroom</h4>
+                                                        <h4><span>Webmaster</span> / State Newsroom</h4>
                                                         <h5 class="badge">Feb 2019 - Present</h5>
                                                     </div>
                                                     <p>
                                                         •Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress
                                                     <br/>
-                                                        •Development and maintainenance of Chid theme, adding features and content types as needed
+                                                        •Development and maintainenance of Child theme.
                                                     <br/>
-                                                        •Implementation of SEO Strategy
+                                                        •Solving various legacy code issues while implmenting new post types and features across org web presences.
+                                                    <br/>
+                                                        •SEO Management
                                                     <br/>
                                                         •Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5
                                                     </p>
@@ -241,15 +225,17 @@
                                             <p>
                                                 •Ongoing organization and optimization of existing Wordpress Site
                                             <br/>
-                                                •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages
+                                                •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages, Development of Custom Theme for Blog Site
                                             <br/>
-                                                •Development work including New Pages, Content Types, and BackEnd Features to Push Online Brand Forward
+                                                •Development work including New Page Templates, Content Types, and BackEnd Features
                                             <br/>
                                                 •Implemented Weekly A/B Experiments via Google Optimize and VWO
                                             <br/>
                                                 •Development of Web Metrics Dashboard utilizing full Google web suite including GTM, GA, GO, and GDS
                                             <br/>
-                                                •Wordpress, PHP, Moustache, Apache, Nginx, MySQL, jQuery, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO
+                                                •Development of Several Business Microapps in Node including Slack Bots, Intercom Chat Bots, and Testing Modules
+                                            <br/>
+                                                •Wordpress, PHP, Node.JS, Moustache, Apache, Nginx, MySQL, jQuery, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO, Heroku
                                             </p>
                                         </div>
                                         <div class="exp">
@@ -261,6 +247,8 @@
                                                 •Create, code and maintain sites from layout to final form according to the unique client needs.
                                             <br/>
                                                 •Worked on existing code bases to improve UX/UI for a variety of clients
+                                            <br/>
+                                                •Assisted various clients with mobilizations of CMS and Static sites.
                                             </p>
                                         </div>
                                         <div class="exp">
@@ -273,11 +261,11 @@
                                             <br/>
                                                 •Led Team Optimizing UX/UI for B2B clients
                                             <br/>
-                                                •Reported executive level data via MySQL &amp; VBA
+                                                •Reported executive level data utilizing MySQL &amp; VBA Macros
                                             <br/>
                                                 •Consistently lead team in productivity metrics
                                             <br/>
-                                                •Received CRAFT-E Award, honoring top 4 employees each year. (200 employee company)
+                                                •Received CRAFT-E Award, honoring a small handful of MVP employees each year. (200 employee company)
                                             </p>
                                         </div>
                                        <!--  <div class="exp">
@@ -353,7 +341,7 @@
                         </div>
                     </div>
                     <div class="block-content">
-                        <h3 class="title centerUp">Services I Provide</h3>
+                        <h3 class="title centerUp">Freelance Services I Provide</h3>
                         <div class="row serviceRow">
                             <div class="col-md-4 col-sm-6 service">
                                 <div class="service-icon">
