--- a/resume.html
+++ b/resume.html
@@ -208,9 +208,9 @@
                                                     <p>
                                                         •Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress
                                                     <br/>
-                                                        •Development and maintainenance of Child theme.
+                                                        •Development and maintenance of Child theme.
                                                     <br/>
-                                                        •Solving various legacy code issues while implmenting new post types and features across org web presences.
+                                                        •Solving various legacy code issues while implementing new post types and features across org web presences.
                                                     <br/>
                                                         •SEO Management
                                                     <br/>
@@ -225,7 +225,7 @@
                                             <p>
                                                 •Ongoing organization and optimization of existing Wordpress Site
                                             <br/>
-                                                •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages, Development of Custom Theme for Blog Site
+                                                •Development and maintenance of Wordpress Child Theme Templates, Posts, & Pages, Development of Custom Theme for Blog Site
                                             <br/>
                                                 •Development work including New Page Templates, Content Types, and BackEnd Features
                                             <br/>
