--- a/resume.html
+++ b/resume.html
@@ -202,7 +202,7 @@
                                     <div class="exp-holder">
                                             <div class="exp">
                                                     <div class="hgroup">
-                                                        <h4><span>Webmaster</span> / State Newsroom</h4>
+                                                        <h4><span>Webmaster</span> / The Newsroom</h4>
                                                         <h5 class="badge">Feb 2019 - Present</h5>
                                                     </div>
                                                     <p>
