--- a/resume.html
+++ b/resume.html
@@ -200,27 +200,44 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="exp-holder">
-                                            <div class="exp">
-                                                    <div class="hgroup">
-                                                        <h4><span>Webmaster</span> / The Newsroom</h4>
-                                                        <h5 class="badge">Feb 2019 - Present</h5>
-                                                    </div>
-                                                    <p>
-                                                        •Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress
-                                                    <br/>
-                                                        •Development and maintenance of Child theme.
-                                                    <br/>
-                                                        •Solving various legacy code issues while implementing new post types and features across org web presences.
-                                                    <br/>
-                                                        •SEO Management
-                                                    <br/>
-                                                        •Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5
-                                                    </p>
+                                        <div class="exp">
+                                                <div class="hgroup">
+                                                    <h4><span>Full Stack Developer</span> / States Newsroom</h4>
+                                                    <h5 class="badge">June 2019 - Present</h5>
                                                 </div>
+                                                <p>
+                                                    •Responsible for developing and administrating a national network of news sites receiving approximately 250,000 pageviews/week
+                                                <br/>
+                                                    •System Administrator, Responsible for maintaining Cloudflare Enterprise custom security protocols and all cybersecurity needs.
+                                                <br/>
+                                                    •Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.
+                                                <br/>
+                                                    •SEO Optimization and Management, Weekly Metrics Analysis
+                                                <br/>
+                                                    •Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity 
+                                                </p>
+                                            </div>
                                         <div class="exp">
                                             <div class="hgroup">
+                                                <h4><span>Contracted Webmaster</span> / States Newsroom</h4>
+                                                <h5 class="badge">Feb 2019 - June 2019</h5>
+                                            </div>
+                                            <p>
+                                                •Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress
+                                            <br/>
+                                                •Development and maintenance of Child theme.
+                                            <br/>
+                                                •Solving various legacy code issues while implementing new post types and features across org web presences.
+                                            <br/>
+                                                •SEO Management
+                                            <br/>
+                                                •Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5
+                                            </p>
+                                        </div>
+                                    <div class="exp">
+                                            <div class="hgroup">
                                                 <h4><span>Web Developer</span> / Samanage</h4>
-                                                <h5 class="badge">Aug 2018 - Present</h5>
+                                                <h5 class="badge">July 2018 - June 2019</h5>
                                             </div>
                                             <p>
                                                 •Ongoing organization and optimization of existing Wordpress Site
