--- a/resume.html
+++ b/resume.html
@@ -382,8 +382,8 @@
                                 <i class="fa fa-search fa-lg" aria-hidden="true"></i>
 
                                 </div>
-                                <h4>SEO Consultation </h4>
-                                <p>I have years of experience monitoring the latest SEO Knowledge and implementing the best practices to get web pages ranking.  I utilize stratetic content, semantic HTML, proper OG tagging, and the most modern practices including Web Schema.</p>
+                                <h4>Digital Marketing </h4>
+                                <p>When you launch your digital business with me, or seek a consultation for your already active digital brand, you'll learn to create and monitor a brand experience using Mailchimp, Google Analytics, Google Search Console, and Canva among other digital tools.</p>
                             </div>
                         </div>
                     </div>
