final blurb update

--- a/resume.html
+++ b/resume.html
@@ -373,7 +373,7 @@
                                     <!-- <img src="images/ic/responsive.svg" alt="Responsive" /> -->
                                     <i class="fa fa-laptop fa-lg"  aria-hidden="true"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>Web Development</h4>
                                 <p>I build responsive, memorable single and multi page web applications designed to run in modern browsers.  In every project, my goal is to make my clients amazed by how much the final product exceeds their expectations while representing their vision.</p>
                             </div>
                             <div class="col-md-4 col-sm-6 service">
@@ -383,7 +383,7 @@
 
                                 </div>
                                 <h4>Digital Marketing </h4>
-                                <p>When you launch your digital business with me, or seek a consultation for your already active digital brand, you'll learn to create and monitor a brand experience using Mailchimp, Google Analytics, Google Search Console, and Canva among other digital tools.</p>
+                                <p>When you launch your digital business with me, or seek a consultation for your already active digital brand, you'll learn to create and monitor a brand experience using SEO, Mailchimp, Google Analytics, Google Search Console, and Canva among other digital tools.</p>
                             </div>
                         </div>
                     </div>
