--- a/resume.html
+++ b/resume.html
@@ -49,25 +49,13 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">CSS3</label>
+                                <label class="progress-bar-label">CSS/SCSS/Sass/LESS/Bootstrap</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Wordpress</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Bootstrap 3.3/3.7/4.0</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">SCSS/Sass/LESS</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
@@ -129,18 +117,6 @@
                                         <span>30%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">Angular.JS</label>
-                                <div class="progress">
-                                    <div style="width: 30%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>30%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Angular 2/4</label>
-                                <div class="progress">
-                                    <div style="width: 30%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>30%</span>
-                                    </div>
-                                </div>
                             </div>
                             <div class="col-sm-4">
                                 <label class="progress-bar-label">Photoshop/Gimp</label>
@@ -167,17 +143,6 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">Responsive Design</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Material Design</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
                                 </div>
                                 <label class="progress-bar-label">Web/Marketing Analytics</label>
                                 <div class="progress">
@@ -203,10 +168,10 @@
                                         <div class="exp">
                                                 <div class="hgroup">
                                                     <h4><span>Full Stack Developer</span> / States Newsroom</h4>
-                                                    <h5 class="badge">June 2019 - Present</h5>
+                                                    <h5 class="badge">May 2019 - Present</h5>
                                                 </div>
                                                 <p>
-                                                    •Responsible for developing and administrating a national network of news sites receiving approximately 250,000 pageviews/week
+                                                    •Responsible for developing and administrating a national network of news sites receiving approximately 750,000 pageviews/week
                                                 <br/>
                                                     •System Administrator, Responsible for maintaining Cloudflare Enterprise custom security protocols and all cybersecurity needs.
                                                 <br/>
@@ -220,7 +185,7 @@
                                         <div class="exp">
                                             <div class="hgroup">
                                                 <h4><span>Contracted Webmaster</span> / States Newsroom</h4>
-                                                <h5 class="badge">Feb 2019 - June 2019</h5>
+                                                <h5 class="badge">Feb 2019 - May 2019</h5>
                                             </div>
                                             <p>
                                                 •Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress
@@ -237,10 +202,10 @@
                                     <div class="exp">
                                             <div class="hgroup">
                                                 <h4><span>Web Developer</span> / Samanage</h4>
-                                                <h5 class="badge">July 2018 - June 2019</h5>
+                                                <h5 class="badge">July 2018 - May 2019</h5>
                                             </div>
                                             <p>
-                                                •Ongoing organization and optimization of existing Wordpress Site
+                                                •Development of Business Microapps in Node including Slack Bots, Intercom Chat Bots, and Testing Modules 
                                             <br/>
                                                 •Development and maintenance of Wordpress Child Theme Templates, Posts, & Pages, Development of Custom Theme for Blog Site
                                             <br/>
@@ -273,33 +238,14 @@
                                                 <h4><span>Senior Business Intelligence Analyst</span> / Spoonflower</h4>
                                                 <h5 class="badge">Oct 2015 - July 2017</h5>
                                             </div>
-                                            <p>
-                                                •Led cross-team business intelligence initiatives
-                                            <br/>
-                                                •Led Team Optimizing UX/UI for B2B clients
-                                            <br/>
-                                                •Reported executive level data utilizing MySQL &amp; VBA Macros
-                                            <br/>
-                                                •Consistently lead team in productivity metrics
-                                            <br/>
-                                                •Received CRAFT-E Award, honoring a small handful of MVP employees each year. (200 employee company)
-                                            </p>
+                                            <p><ul>
+                                                <li>•Led cross-team business intelligence initiatives</li>
+                                                <li>•Led Team Optimizing UX/UI for B2B clients</li>
+                                                <li>•Reported executive level data utilizing MySQL &amp; VBA Macros</li>
+                                                <li>•Consistently lead team in productivity metrics</li>
+                                                <li>•Received CRAFT-E Award, honoring a small handful of MVP employees each year. (200 employee company)</li>
+                                            </ul></p>
                                         </div>
-                                       <!--  <div class="exp">
-                                            <div class="hgroup">
-                                                <h4><span>Account Manager</span> / FurnitureLab</h4>
-                                                <h5 class="badge">July 2017 - Dec 2017</h5>
-                                            </div>
-                                            <p>
-                                                •Consulted with leadership and decision makers during web and marketing rebranding cycle
-                                            <br/>
-                                                •Initiated &amp; optimized email marketing strategy in assigned territory
-                                            <br/>
-                                                •Developed company graphics in Adobe Suite
-                                            <br/>
-                                                •Managed West Coast Sales Region through independent marketing campaigns
-                                            </p>
-                                        </div> -->
                                     </div>
                                 </div>
                             </div>
