--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,27 @@
                                         </ul>
                                     </div>
                                     <div class="portfolio-container row isotope" id="portfolio-container">
+                                           <!-- WORK 1 START -->
+                                           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
+                                            <a class="open-project" target="_blank" href="https://statesnewsroom.com">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Internal Staff Portal</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Internal systems solution for rapidly growing startup.  Introduced and standardized onboarding procedures, staff training, inner company request and communication systems, and more.  Complex multisite operating out of a single optimized database.
+                                                                <br>
+                                                                Private, Link not available.
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/portal.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
                                             <!-- WORK 1 START -->
                                             <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
                                                <a class="open-project" target="_blank" href="https://www.goodnesscooks.com/">
@@ -107,6 +128,29 @@
                                                 </a>
                                             </div>
                                             <!-- WORK 1 END -->
+                                            <!-- WORK 1 START -->
+                                           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
+                                            <a class="open-project" target="_blank" href="https://statesnewsroom.com">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>States Newsroom</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Designed and developed new company branded website, taking a "dream features" list from leadership and making it happen.
+                                                                <br> 
+                                                                Javascript, Node.JS, Express, Handlebars, MySQL, Slack API, MVC Development, UX/UI, Design, HTML, CSS, Bootstrap 4.3 
+                                                                <br>
+                                                                View Site
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/snrs.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
                                          <!-- WORK 1 START -->
                                          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
                                             <a class="open-project" target="_blank" href="https://www.ohiocapitaljournal.com/">
