--- a/resume.html
+++ b/resume.html
@@ -137,7 +137,7 @@
                                         <span>70%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">SVG</label>
+                                <label class="progress-bar-label">SVG/Web Icons</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
