--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="contact.html" class="social-icon">
+                            <a href="mailto:joewrightwebdev@gmail.com" class="social-icon">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                             </a>
                         </li>
