--- a/resume.html
+++ b/resume.html
@@ -192,7 +192,7 @@
                                         </div>
                                     <div class="exp">
                                             <div class="hgroup">
-                                                <h4><span>Web Developer</span> / Samanage</h4>
+                                                <h4><span>Full Stack Web Developer</span> / Samanage</h4>
                                                 <h5 class="badge">July 2018 - May 2019</h5>
                                             </div>
                                             <ul>
