--- a/resume.html
+++ b/resume.html
@@ -170,11 +170,11 @@
                                                     <h5 class="badge">May 2019 - Present</h5>
                                                 </div>
                                                 <ul>
-                                                    <li>•Responsible for developing and administrating a national network of news sites receiving approximately 750,000 pageviews/week</li>
-                                                    <li>•System Administrator, Responsible for maintaining Cloudflare Enterprise custom security protocols and all cybersecurity needs.</li>
-                                                    <li>•Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.</li>
-                                                    <li>•SEO Optimization and Management, Weekly Metrics Analysis</li>
-                                                    <li>•Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity</li>
+                                                    <li>Responsible for developing and administrating a national network of news sites receiving approximately 750,000 pageviews/week</li>
+                                                    <li>System Administrator, Responsible for maintaining Cloudflare Enterprise custom security protocols and all cybersecurity needs.</li>
+                                                    <li>Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.</li>
+                                                    <li>SEO Optimization and Management, Weekly Metrics Analysis</li>
+                                                    <li>Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity</li>
                                                 </ul>
                                             </div>
                                         <div class="exp">
@@ -183,11 +183,11 @@
                                                 <h5 class="badge">Feb 2019 - May 2019</h5>
                                             </div>
                                             <ul>
-                                                <li>•Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress</li>
-                                                <li>•Development and maintenance of Child theme.</li>
-                                                <li>•Solving various legacy code issues while implementing new post types and features across org web presences.</li>
-                                                <li>•SEO Management</li>
-                                                <li>•Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5</li>
+                                                <li>Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress</li>
+                                                <li>Development and maintenance of Child theme.</li>
+                                                <li>Solving various legacy code issues while implementing new post types and features across org web presences.</li>
+                                                <li>SEO Management</li>
+                                                <li>Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5</li>
                                             </ul>
                                         </div>
                                     <div class="exp">
@@ -196,13 +196,13 @@
                                                 <h5 class="badge">July 2018 - May 2019</h5>
                                             </div>
                                             <ul>
-                                                <li>•Development of Business Microapps in Node including Slack Bots, Intercom Chat Bots, and Testing Modules </li>
-                                                <li>•Development and maintenance of Wordpress Child Theme Templates, Posts, & Pages, Development of Custom Theme for Blog Site</li>
-                                                <li>•Development work including New Page Templates, Content Types, and BackEnd Features
-                                                <li>•Implemented Weekly A/B Experiments via Google Optimize and VWO</li>
-                                                <li>•Development of Web Metrics Dashboard utilizing full Google web suite including GTM, GA, GO, and GDS</li>
-                                                <li>•Development of Several Business Microapps in Node including Slack Bots, Intercom Chat Bots, and Testing Modules</li>
-                                                <li>•Wordpress, PHP, Node.JS, Moustache, Apache, Nginx, MySQL, jQuery, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO, Heroku</li>
+                                                <li>Development of Business Microapps in Node including Slack Bots, Intercom Chat Bots, and Testing Modules </li>
+                                                <li>Development and maintenance of Wordpress Child Theme Templates, Posts, & Pages, Development of Custom Theme for Blog Site</li>
+                                                <li>Development work including New Page Templates, Content Types, and BackEnd Features
+                                                <li>Implemented Weekly A/B Experiments via Google Optimize and VWO</li>
+                                                <li>Development of Web Metrics Dashboard utilizing full Google web suite including GTM, GA, GO, and GDS</li>
+                                                <li>Development of Several Business Microapps in Node including Slack Bots, Intercom Chat Bots, and Testing Modules</li>
+                                                <li>Wordpress, PHP, Node.JS, Moustache, Apache, Nginx, MySQL, jQuery, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO, Heroku</li>
                                             </ul>
                                         </div>
                                         <div class="exp">
@@ -211,9 +211,9 @@
                                                 <h5 class="badge">Feb 2017 - <span class="current">Present</span></h5>
                                             </div>
                                             <ul>
-                                                <li>•Create, code and maintain sites from layout to final form according to the unique client needs.</li>
-                                                <li>•Worked on existing code bases to improve UX/UI for a variety of clients</li>
-                                                <li>•Assisted various clients with mobilizations of CMS and Static sites.</li>
+                                                <li>Create, code and maintain sites from layout to final form according to the unique client needs.</li>
+                                                <li>Worked on existing code bases to improve UX/UI for a variety of clients</li>
+                                                <li>Assisted various clients with mobilizations of CMS and Static sites.</li>
                                             </ul>
                                         </div>
                                         <div class="exp">
@@ -222,11 +222,11 @@
                                                 <h5 class="badge">Oct 2015 - July 2017</h5>
                                             </div>
                                             <ul>
-                                                <li>•Led cross-team business intelligence initiatives</li>
-                                                <li>•Led Team Optimizing UX/UI for B2B clients</li>
-                                                <li>•Reported executive level data utilizing MySQL &amp; VBA Macros</li>
-                                                <li>•Consistently lead team in productivity metrics</li>
-                                                <li>•Received CRAFT-E Award, honoring a small handful of MVP employees each year.</li>
+                                                <li>Led cross-team business intelligence initiatives</li>
+                                                <li>Led Team Optimizing UX/UI for B2B clients</li>
+                                                <li>Reported executive level data utilizing MySQL &amp; VBA Macros</li>
+                                                <li>Consistently lead team in productivity metrics</li>
+                                                <li>Received CRAFT-E Award, honoring a small handful of MVP employees each year.</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -246,9 +246,9 @@
                                                 <h5 style="color:black">Feb 2018 - Aug 2018</h5>
                                             </div>
                                             <ul>
-                                                <li>•4.2 Course Average</li>
-                                                <li>•6 Month Program meeting 20 hours per week</li>
-                                                <li>•Course Topics/Certifications include: HTML, CSS, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Git, C#, ASP.Net, and more</li>
+                                                <li>4.2 Course Average</li>
+                                                <li>6 Month Program meeting 20 hours per week</li>
+                                                <li>Course Topics/Certifications include: HTML, CSS, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Git, C#, ASP.Net, and more</li>
                                             </ul>
                                         </div>
                                         <div class="exp">
@@ -257,9 +257,9 @@
                                                 <h5 style="color:black">Aug 2012 - May 2014</h5>
                                             </div>
                                             <ul>
-                                                <li>•Full Scholarship Recipient</li>
-                                                <li>•Recieved Research and Teaching Appointment</li>
-                                                <li>•4.0 Course Average</li>
+                                                <li>Full Scholarship Recipient</li>
+                                                <li>Recieved Research and Teaching Appointment</li>
+                                                <li>4.0 Course Average</li>
                                             </ul>
                                         </div>
                                         <div class="exp">
@@ -268,10 +268,10 @@
                                                 <h5 style="color:black">Aug 2006 - May 2011</h5>
                                             </div>
                                             <ul>
-                                                <li>•Benjamin Franklin Scholarship Receipient (highly competitive, approximately 10 recipients per year)</li>
-                                                <li>•3 year tenure as an Editor-in-Chief in Student Media, overseeing Windhover Design &amp; Literary magazine.</li>
-                                                <li>•3 time Golden Crown Design Award receipient, EIC Windhover Magazine</li>
-                                                <li>•3.8 Engineering, 4.0 English</li>
+                                                <li>Benjamin Franklin Scholarship Receipient (highly competitive, approximately 10 recipients per year)</li>
+                                                <li>3 year tenure as an Editor-in-Chief in Student Media, overseeing Windhover Design &amp; Literary magazine.</li>
+                                                <li>3 time Golden Crown Design Award receipient, EIC Windhover Magazine</li>
+                                                <li>3.8 Engineering, 4.0 English</li>
                                             </ul>
                                         </div>
                                     </div>
