--- a/resume.html
+++ b/resume.html
@@ -165,18 +165,29 @@
                                 <div class="col-md-12">
                                     <div class="exp-holder">
                                         <div class="exp">
-                                                <div class="hgroup">
-                                                    <h4><span>Full Stack Developer</span> / States Newsroom</h4>
-                                                    <h5 class="badge">May 2019 - Present</h5>
-                                                </div>
-                                                <ul>
-                                                    <li>Responsible for developing and administrating a national network of news sites receiving approximately 750,000 pageviews/week</li>
-                                                    <li>System Administrator, Responsible for maintaining Cloudflare Enterprise custom security protocols and all cybersecurity needs.</li>
-                                                    <li>Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.</li>
-                                                    <li>SEO Optimization and Management, Weekly Metrics Analysis</li>
-                                                    <li>Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity</li>
-                                                </ul>
+                                            <div class="hgroup">
+                                                <h4><span>Principal Engineer</span> / States Newsroom</h4>
+                                                <h5 class="badge">June 2020 - Present</h5>
                                             </div>
+                                            <ul>
+                                                <li>Responsible for developing and administrating a national network of news sites receiving approximately one million pageviews/week</li>
+                                                <li>System Administrator, Responsible for maintaining enterprise cybersecurity solution and 24/7 network integrity.</li>
+                                                <li>Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.</li>
+                                                <li>SEO Optimization and Management, Weekly Metrics Analysis</li>
+                                                <li>Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity, Web Host Manager, Linux</li>
+                                            </ul>
+                                        </div>
+                                        <div class="exp">
+                                            <div class="hgroup">
+                                                <h4><span>Full Stack Engineer</span> / States Newsroom</h4>
+                                                <h5 class="badge">May 2019 - June 2020</h5>
+                                            </div>
+                                            <ul>
+                                                <li>Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.</li>
+                                                <li>SEO Optimization and Management, Weekly Metrics Analysis</li>
+                                                <li>Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity</li>
+                                            </ul>
+                                        </div>
                                         <div class="exp">
                                             <div class="hgroup">
                                                 <h4><span>Contracted Webmaster</span> / States Newsroom</h4>
