--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,26 @@
                                         </ul>
                                     </div>
                                     <div class="portfolio-container row isotope" id="portfolio-container">
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui nodeJS fullstack">
+                                            <a class="open-project" target="_blank" href="https://audiosnackpack.herokuapp.com/">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Audio Snackpack</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Web software which allows the user to upload an audio clip, trip it, add text, choose an aesthetic theme, and produce a video graphic of their soundclip for sharing podcast previews on social media.
+                                                                <br>
+                                                                See More
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/snackpack.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
                                            <!-- WORK 1 START -->
                                            <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
                                             <a class="open-project" target="_blank" href="https://statesnewsroom.com">
