--- a/resume.html
+++ b/resume.html
@@ -190,11 +190,11 @@
                                         </div>
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h4><span>Contracted Webmaster</span> / States Newsroom</h4>
+                                                <h4><span>Contracted Webmaster & Developer</span> / States Newsroom</h4>
                                                 <h5 class="badge">Feb 2019 - May 2019</h5>
                                             </div>
                                             <ul>
-                                                <li>Contracted Webmaster for 11 unique news websites, powered by PHP/Wordpress</li>
+                                                <li>Contracted Webmaster for network of unique news websites, powered by PHP/Wordpress</li>
                                                 <li>Development and maintenance of Child theme.</li>
                                                 <li>Solving various legacy code issues while implementing new post types and features across org web presences.</li>
                                                 <li>SEO Management</li>
